--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,6 +4,7 @@ server:
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/ead-authuser
+#    url: jdbc:postgresql://localhost:5432/ead-authuser-dev
     username: postgres
     password: postgres
   jpa:
